Kubernetes/Developers/Ingress_Controller/ingressController/node-app-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: ingress-node-app-service
  labels:
    name: ingress-app-service                                                    
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30001
  selector:
    name: ingress-node-pod
    type: backend
