Kubernetes/Developers/Ingress_Controller/ingressController/Ingress-wear-watch.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wear-watch
spec: 
  rules:
    - host: example.com
      http:
        path: /wear
        paths:
          - backend:
              serviceName: wear-service
              servicePort: 80
    - host: example.com
      http:
        path: /watch
        paths:
          - backend:
              serviceName: watch-service
              servicePort: 80
