Kubernetes/Developers/Ingress_Controller/ingressController/node-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-app-ingress
spec:
  rules:
   -  host: localhost
      http:
        paths:
          - path: /api/1
            pathType: Prefix
            backend:
              service:
                name: ingress-node-app-service
                port:
                  number: 80
          - path: /api/2
            pathType: Prefix
            backend:
              service:
                name: ingress-node-app-service
                port:
                  number: 80
          - path: /api/3
            pathType: Prefix
            backend:
              service:
                name: ingress-node-app-service
                port:
                  number: 80
          - path: /api/4
            pathType: Prefix
            backend:
              service:
                name: ingress-node-app-service
                port:
                  number: 80
